# 360crm-devops-test

./: .dockerignore  .env.dev  .pre-commit-config.yaml  CRM360_TEST.txt  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py  swagger.py
src/database/: initdb.sql
src/routes/: blueprints.py
src/routes/claims/: route.py
src/routes/roles/: route.py
src/routes/user_claims/: route.py
src/routes/users/: route.py
terraform/: .terraform.lock.hcl  kind.tf  main.tf  provider.tf  terraform.tfvars.localstack  variables.tf
terraform/modules/dynamodb/: dynamodb.tf
terraform/modules/s3/: s3.tf  variables.tf
